done some changes in ui

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,3 +49,7 @@ body {
 .cambria {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
+
+.inter{
+  font-family: "Inter";
+}
